--- a/src/scoped.css
+++ b/src/scoped.css
@@ -17,7 +17,7 @@
 }
 
 
-.principal {
+#principal {
     display : flex;
     overflow : hidden;
     background : var(--cpu-background);
@@ -49,7 +49,7 @@ a:hover svg , a:focus svg {
     fill : currentColor;
 }
 
-.loading circle {
+#loading circle {
     fill : #777;
 }
 
@@ -92,15 +92,15 @@ a {
     cursor : pointer;
 }
 
-.loading, #play, #pause,
+#loading, #play, #pause,
 .show-main #pageshare, .show-main #pageerror,
 .show-share #pagemain, .show-share #pageerror,
 .show-error #pagemain, .show-error #pageshare , .show-error #poster,
-.handheld-nav , .show-handheld-nav #titleline {
+#handheld-nav , .show-handheld-nav #titleline {
     display : none;
 }
 
-.act-loading .loading,
+.act-loading #loading,
 .act-play #play,
 .act-pause #pause {
     display : block;
@@ -114,15 +114,15 @@ a {
     align-items: center;
 }
 
-.act-loading .loading circle:nth-child(1) {
+.act-loading #loading circle:nth-child(1) {
       animation: pulse0 2s infinite;
 }
 
-.act-loading .loading circle:nth-child(2) {
+.act-loading #loading circle:nth-child(2) {
       animation: pulse1 2s infinite;
 }
 
-.act-loading .loading circle:nth-child(3) {
+.act-loading #loading circle:nth-child(3) {
       animation: pulse2 2s infinite;
 }
 
@@ -161,12 +161,12 @@ a {
     object-fit: contain;
 }
 
-.loading svg, #play svg, #pause svg, #actions svg {
+#loading svg, #play svg, #pause svg, #actions svg {
     vertical-align : middle;
     max-width : 100%;
     max-height : 100%;
 }
-.loading {
+#loading {
     background : var(--cpu-background) !important;
 }
 #titleline {
@@ -237,11 +237,11 @@ a {
   100% { background-position-x : 0px;}
 }
 
-.show-handheld-nav .handheld-nav {
+.show-handheld-nav #handheld-nav {
     display : flex;
 }
 
-.handheld-nav * {
+#handheld-nav * {
   flex : 1 0 auto;
   height : calc( var(--cpu-height) - calc( var(--cpu-timeline-height) + 4px ) );
 }
