Adding --cpu-min-padding
Parameters to not put the share button #15

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -310,6 +310,7 @@ a {
     color : var(--cpu-color);
     list-style: none;
     flex-direction: column; 
+    padding : 0 var(--cpu-min-padding);
 }
 .cue {
     border-top : 1px solid black;
