--- a/src/global.css
+++ b/src/global.css
@@ -19,6 +19,7 @@ audio[controls] {
     --cpu-popup-color : #333;
     --cpu-elapse-width : 185px;
     --cpu-min-padding : 16px;
+    --cpu-inner-shadow : inset 0px 5px 10px -5px black;
 }
 
 @media (max-width: 640px) , @element .interface and (max-width: 640px) {
