Adding visual interface for playlist in <cpu-controller>
Use a playlist for continuous playing at a page #7

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -303,7 +303,7 @@ a {
     border-right: 4px solid transparent;
 } 
 
-.chapters {
+.chapters, .playlist {
     display : flex;
     overflow : scoll;
     background : var(--cpu-background);
