--- a/src/scoped.css
+++ b/src/scoped.css
@@ -216,6 +216,21 @@ a {
 .elapsedline {
     z-index : 2;
 }
+.points {
+    display : block ;
+    position : absolute;
+    left : 0;
+    width: 100%;
+    opacity : 0;
+}
+.points svg {
+    fill : red;
+    pointer-events : none;
+    position: absolute;
+    z-index : 126;
+    width : 10px;
+    height : 10px;
+}
 
 .act-loading .loadingline {
     background : grey;
