Better aspect for loading timeline #5

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -233,8 +233,14 @@ a {
 }
 
 .act-loading .loadingline {
-    background : grey;
+    background : repeating-linear-gradient(135deg, #bbb 0, #999 5px, #999 10px, #ddd 15px, #ddd 20px, #bbb 25px);
+    animation: loadingline 500ms linear infinite;
 }
+@keyframes loadingline {
+  0% { background-position-x : 0px; }
+  100% { background-position-x : 30px;}
+}
+
 
 .hide-actions .actions {
     /* we won't display:none, as we need a padding on the right */
