--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 <ul id="pieddepage">
-    <li><a href="https://dascritch.github.io/cpu-audio/">CPU Audio</li>
-    <li><a href="FEATURES.md">Features</li>
-    <li><a href="INSTALL.md">How to install</li>
-    <li><a href="TROUBLESHOOTING.md">Troubleshooting</li>
-    <li><a href="CONTRIBUTING.md">How to contribute</li>
-    <li><a href="TODO.md">What to do</li>
-    <li><a href="https://github.com/dascritch/cpu-audio/">Repository</li>
+    <li><a href="https://dascritch.github.io/cpu-audio/">CPU Audio</a></li>
+    <li><a href="FEATURES.md">Features</a></li>
+    <li><a href="INSTALL.md">How to install</a></li>
+    <li><a href="TROUBLESHOOTING.md">Troubleshooting</a></li>
+    <li><a href="CONTRIBUTING.md">How to contribute</a></li>
+    <li><a href="TODO.md">What to do</a></li>
+    <li><a href="https://github.com/dascritch/cpu-audio/">Repository</a></li>
 </ul>
 <style>
 #pieddepage { display : flex; }
