grmbl. no style for the moment

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
+<p>
+<a href="https://dascritch.github.io/cpu-audio/">CPU Audio</a>
+</p>
 <ul id="pieddepage">
-    <li><a href="https://dascritch.github.io/cpu-audio/">CPU Audio</a></li>
     <li><a href="FEATURES.md">Features</a></li>
     <li><a href="INSTALL.md">How to install</a></li>
     <li><a href="TROUBLESHOOTING.md">Troubleshooting</a></li>
@@ -7,6 +9,3 @@
     <li><a href="TODO.md">What to do</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/">Repository</a></li>
 </ul>
-<style>
-#pieddepage { display : flex; }
-</style>
