--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,9 @@
+-->
 <h1><a href="https://dascritch.github.io/cpu-audio/">CPU Audio webcomponent</a></h1>
 <ul id="pieddepage">
     <li><a href="FEATURES.md">Features</a></li>
     <li><a href="INSTALL.md">How to install</a></li>
-    <li><a href="LIVE.html">Live preview</a></li>
+    <li><a href="LIVE.md">Live preview</a></li>
     <li><a href="TROUBLESHOOTING.md">Troubleshooting</a></li>
     <li><a href="CONTRIBUTING.md">How to contribute</a></li>
     <li><a href="TODO.md">What to do</a></li>
@@ -31,3 +32,4 @@
         border : 4px red solid; padding : 4px;
     }
 </style>
+<!--
