prepare for breakpoints
Create a live configurator page #35

--- a/_includes/live_config.html
+++ b/_includes/live_config.html
@@ -91,31 +91,25 @@
 <button type="reset">Reset values</button>
 
 <fieldset>
+    <label for="css_font-family">
+        <span>Font families</span>
+        <input id="css_font-family" name="css_font-family" type="text" />
+    </label>
+</fieldset>
+
+<fieldset>
+    <label>
+        <span></span><span>Colour</span><span>Background</span>
+    </label>
     <label>
         <span>Colours except playing or in error</span>
         <input name="css_background" type="color" />
         <input name="css_color" type="color" />
     </label>
-    <label for="css_elapse-width">
-        <span>Time indicator width (upper than 640px wide)</span>
-        <input id="css_elapse-width" name="css_elapse-width" type="text" />
-    </label>
     <label for="css_error-background">
         <span>Colours when there is a media error</span>
         <input name="css_error-background" type="color" />
         <input name="css_error-color" type="color" />
-    </label>
-    <label for="css_font-family">
-        <span>Font families</span>
-        <input id="css_font-family" name="css_font-family" type="text" />
-    </label>
-    <label for="css_font-size">
-        <span>Font size</span>
-        <input id="css_font-size" name="css_font-size" type="text" />
-    </label>
-    <label for="css_height">
-        <span>Height and width of the square buttons</span>
-        <input id="css_height" name="css_height" type="text" />
     </label>
     <label for="css_inner-shadow">
         <span>Shadow between horizontal panels</span>
@@ -130,6 +124,21 @@
         <span>Colours for the time pointer</span>
         <input name="css_popup-background" type="color" />
         <input name="css_popup-color" type="color" />
+    </label>
+</fieldset>
+
+<fieldset>
+    <label for="css_elapse-width">
+        <span>Time indicator width (upper than 640px wide)</span>
+        <input id="css_elapse-width" name="css_elapse-width" type="text" />
+    </label>
+    <label for="css_font-size">
+        <span>Font size</span>
+        <input id="css_font-size" name="css_font-size" type="text" />
+    </label>
+    <label for="css_height">
+        <span>Height and width of the square buttons</span>
+        <input id="css_height" name="css_height" type="text" />
     </label>
 </fieldset>
 
