--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 -->
 <h1><a href="https://dascritch.github.io/cpu-audio/">CPU Audio webcomponent</a></h1>
 <ul id="pieddepage">
-    <li><a href="FEATURES.md">Features</a></li>
-    <li><a href="INSTALL.md">How to install</a></li>
-    <li><a href="LIVE.md">Live preview</a></li>
-    <li><a href="TROUBLESHOOTING.md">Troubleshooting</a></li>
-    <li><a href="CONTRIBUTING.md">How to contribute</a></li>
-    <li><a href="TODO.md">What to do</a></li>
+    <li><a href="FEATURES">Features</a></li>
+    <li><a href="INSTALL">How to install</a></li>
+    <li><a href="LIVE">Live preview</a></li>
+    <li><a href="TROUBLESHOOTING">Troubleshooting</a></li>
+    <li><a href="CONTRIBUTING">How to contribute</a></li>
+    <li><a href="TODO">What to do</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/">Repository</a></li>
 </ul>
 <script src="./dist/cpu-audio.js" async></script>
