show only changed css parameters
Create a live configurator page #35

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,14 @@
--->
-<h1><a href="https://dascritch.github.io/cpu-audio/">CPU Audio webcomponent</a></h1>
+ -->
+<h3><a href="https://dascritch.github.io/cpu-audio/">CPU Audio webcomponent</a></h3>
 <ul id="pieddepage">
     <li><a href="FEATURES">Features</a></li>
-    <li><a href="INSTALL">How to install</a></li>
-    <li><a href="LIVE">Live preview</a></li>
-    <li><a href="TROUBLESHOOTING">Troubleshooting</a></li>
-    <li><a href="CONTRIBUTING">How to contribute</a></li>
-    <li><a href="TODO">What to do</a></li>
-    <li><a href="https://github.com/dascritch/cpu-audio/">Repository</a></li>
+    <li><a href="INSTALL">Install</a></li>
+    <li><a href="LIVE">Live settings</a></li>
+    <li><a href="TROUBLESHOOTING">Troubles</a></li>
+    <li><a href="CONTRIBUTING">Contribute</a></li>
+    <li><a href="TODO">To do</a></li>
+    <li><a href="https://github.com/dascritch/cpu-audio/">Code</a></li>
+    <li><a href="http://cpu.pm">CPU radio show</a></li>
 </ul>
 <script src="./dist/cpu-audio.js" async></script>
 <style type="text/css">
@@ -31,5 +32,15 @@
     .too-old {
         border : 4px red solid; padding : 4px;
     }
+
+    #pieddepage {
+        padding : 0;
+        display : flex;
+    }
+
+    #pieddepage li {
+        list-style :none;
+        flex : 1 0 auto;
+    }
 </style>
-<!--
+<!-- 
