Add tests in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
     <li><a href="TROUBLESHOOTING">Troubles</a></li>
     <li><a href="CONTRIBUTING">Contribute</a></li>
     <li><a href="TODO">To do</a></li>
+    <li><a href="tests-browser.html">Tests</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/">Code</a></li>
     <li><a href="http://cpu.pm">CPU radio show</a></li>
 </ul>
