add visual feedback
Better way to change time position on mobile #25

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -41,7 +41,7 @@ svg {
     width : var(--cpu-height);
     height : var(--cpu-height);
 }
-a:hover, a:focus {
+a:hover, a:focus, button:hover, button:focus {
     color : var(--cpu-background);
     background : var(--cpu-color);
 }
