--- a/src/scoped.css
+++ b/src/scoped.css
@@ -1,7 +1,7 @@
-
 .interface {
     font-family : var(--cpu-font-family);
     font-size : var(--cpu-font-size);
+    --cpu-timeline-height : 10px;
 }
 
 .interface, * {
@@ -189,10 +189,11 @@ a {
     flex : 1 0 var(--cpu-elapse-width);
     text-align : right;
 }
+
 .time {
     background : black;
     width : 100%;
-    height : 10px;
+    height : var(--cpu-timeline-height);
     display : block;
     border-radius : 4px;
     position : relative;
@@ -201,7 +202,7 @@ a {
 .loadingline,
 .elapsedline {
     background : white;
-    height : 10px ;
+    height : var(--cpu-timeline-height) ;
     display : block ;
     position : absolute;
     left : 0;
@@ -242,6 +243,11 @@ a {
 
 .handheld-nav * {
   flex : 1 0 auto;
+  height : calc( var(--cpu-height) - calc( var(--cpu-timeline-height) + 4px ) );
+}
+
+[type="time"] {
+    text-align : center;
 }
 
 .hide-actions .actions {
@@ -413,10 +419,8 @@ a {
         max-height : 16px;
     }
 
-    .time,
-    .loadingline,
-    .elapsedline {
-        height : 8px ;
+    .interface {
+        --cpu-timeline-height : 8px ;
     }
 }
 @media (max-width: 480px) , @element .interface and (max-width: 480px) {
