--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,4 +58,11 @@
         flex : 1 0 auto;
     }
 </style>
+<script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function(){
+        let controller = document.createElement('cpu-controller');
+        controller.setAttribute('mode', 'compact');
+        document.querySelector('footer').appenChild(controller);
+    });
+</script>
 <!-- 
