--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -62,7 +62,7 @@
     document.addEventListener('DOMContentLoaded', function(){
         let controller = document.createElement('cpu-controller');
         controller.setAttribute('mode', 'compact');
-        document.querySelector('footer').appenChild(controller);
+        document.querySelector('footer').appendChild(controller);
     });
 </script>
 <!-- 
