--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,14 @@
 <p>Crafted with ♥ from Toulouse, France, for <a href="http://cpu.pm">CPU radio show</a></p>
 <script src="./dist/cpu-audio.js" async></script>
 <style type="text/css">
+    h1 {
+        word-break: keep-all;
+    }
+
+    h1 cpu-controller {
+        display : inline-block;
+    }
+
     style.showcode {
         display : block;
     }
