Relinking CONTRIBUTING to the github.com page , avoiding the annoying 404
Have a local .md → .html generator #37

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     <li><a href="INSTALL">Install</a></li>
     <li><a href="LIVE">Live settings</a></li>
     <li><a href="TROUBLESHOOTING">Troubles</a></li>
-    <li><a href="CONTRIBUTING">Contribute</a></li>
+    <li><a href="https://github.com/dascritch/cpu-audio/blob/master/CONTRIBUTING.md">Contribute</a></li>
     <li><a href="TODO">To do</a></li>
     <li><a href="tests-browser.html">Tests</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/">Code</a></li>
