Add a footer link
Create a live chapter editor page #38

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,9 @@
     <li><a href="FEATURES">Features</a></li>
     <li><a href="INSTALL">Install</a></li>
     <li><a href="LIVE">Live settings</a></li>
+    <li><a href="CHAPTERS_ED">Chapter editor</a></li>
     <li><a href="TROUBLESHOOTING">Troubles</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/blob/master/CONTRIBUTING.md">Contribute</a></li>
-    <li><a href="TODO">To do</a></li>
-    <li><a href="tests-browser.html">Tests</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/">Code</a></li>
     <li><a href="http://cpu.pm">CPU radio show</a></li>
 </ul>
