--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
     <li><a href="TROUBLESHOOTING">Troubles</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/blob/master/CONTRIBUTING.md">Contribute</a></li>
     <li><a href="https://github.com/dascritch/cpu-audio/">Code</a></li>
-    <li><a href="http://cpu.pm">CPU radio show</a></li>
 </ul>
+<p>Crafted with ♥ from Toulouse, France, for <a href="http://cpu.pm">CPU radio show</a></p>
 <script src="./dist/cpu-audio.js" async></script>
 <style type="text/css">
     style.showcode {
