--- a/src/scoped.css
+++ b/src/scoped.css
@@ -217,6 +217,25 @@ a {
 #elapsedline {
     z-index : 2;
 }
+#chaptersline {
+    position : absolute;
+    /*background : #007;*/
+    width : 100%;
+    height : 2px;
+    bottom : -4px;
+}
+
+#chaptersline span {
+    position : absolute;
+    background : black;
+    display : block;
+    height : 2px;
+    outline : 2px solid var(--cpu-background);
+}
+#chaptersline span.with-preview {
+    background : white;
+}
+
 #points {
     display : block ;
     position : absolute;
@@ -235,18 +254,6 @@ a {
  
 #preview {
     display : none;
-}
-
-.with-preview #preview {
-    display : block;
-    position : absolute;
-    height : var(--cpu-timeline-height) ;
-    left : 0;
-    right: 0;
-    outline : 2px solid cyan;
-    border-radius : 4px;
-    z-index : 127;
-    pointer-events : none;
 }
 
 .act-loading #loadingline {
@@ -443,6 +450,20 @@ a {
     #interface {
         --cpu-timeline-height : 8px ;
     }
+
+    .with-preview #preview {
+        display : block;
+        position : absolute;
+        height : var(--cpu-timeline-height) ;
+        left : 0;
+        right: 0;
+        outline : 2px solid cyan;
+        border-radius : 4px;
+        z-index : 127;
+        pointer-events : none;
+    }
+
+    
 }
 @media (max-width: 480px) , @element #interface and (max-width: 480px) {
     .mode-default .notiny {
