--- a/src/global.css
+++ b/src/global.css
@@ -21,6 +21,7 @@ audio[controls] {
     --cpu-min-padding : 16px;
     --cpu-inner-shadow : inset 0px 5px 10px -5px black;
     --cpu-color-transitions : 0s;
+    --cpu-background-transitions : 0s;
     --cpu-unfold : 0s;
 }
 
