--- a/src/scoped.css
+++ b/src/scoped.css
@@ -220,10 +220,9 @@ a {
 }
 #chaptersline {
     position : absolute;
-    /*background : #007;*/
     width : 100%;
     height : 2px;
-    bottom : -4px;
+    bottom : -2px;
 }
 
 #chaptersline a {
@@ -231,7 +230,7 @@ a {
     background : black;
     display : block;
     height : 2px;
-    outline : 2px solid var(--cpu-background);
+    border : 1px solid var(--cpu-background);
 }
 #chaptersline a:hover, #chaptersline a.with-preview {
     background : white;
