Public methods should have a javadoc #49

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
 <ul id="pieddepage">
     <li><a href="FEATURES">Features</a></li>
     <li><a href="INSTALL">Install</a></li>
+    <li><a href="API">API</a></li>
     <li><a href="LIVE">Live settings</a></li>
     <li><a href="CHAPTERS_ED">Chapter editor</a></li>
     <li><a href="TROUBLESHOOTING">Troubles</a></li>
