native share was still showing standard shares

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -332,7 +332,7 @@ a {
     display : flex;
 }
 
-.hasnativeshare .nonativeshare {
+.hasnativeshare #pageshare .nonativeshare {
     display : none;
 }
 
