compact mode must have cover, because of the mode="compact,default" setting

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -431,7 +431,7 @@ a {
     width : var(--cpu-height);
 }
 
-.mode-compact #poster,
+/*.mode-compact #poster,*/
 .mode-compact #title,
 .mode-compact #line,
 .mode-compact #actions,
