--- a/src/scoped.css
+++ b/src/scoped.css
@@ -210,7 +210,9 @@ a {
 }
 
 #time {
-    background : black;
+    background-color : black;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     width : 100%;
     height : var(--cpu-timeline-height);
     display : block;
